/** @page CHANGES

@section v2_01_dev Changes with libapreq2-2.01-dev

- November 7, 2003 - C API mod_apreq.c [joes]

Parser errors were creeping into the return value of apreq_filter,
which breaks the "transparent tee" paradigm.  This caused bogus
"400 Bad Request" responses (first reported by Vladimir Dudo) 
to occur when libapreq2 was used by an output filter during a GET 
request (handled by apache2's default handler).  The test suite 
has been updated accordingly.

- October 26, 2003 - C API [joes]

Incorporate libapreq_cgi into libapreq2 as the default environment,
and add apreq_env_t and initializer apreq_env_module() to manage the
environment at runtime (determining the environment at load-time
was problematic on non-ELF systems).

@section v2_0_0 Changes with libapreq2-2.00-dev

- October 24, 2003 - C API: libapreq_cgi.c [randyk, joes]

CGI environment defined by env/libapreq_cgi.c is functional
(with tests added to env/t).  This library may soon be incorporated
directly into libapreq2 as a default enviroment.

- October 23, 2003 - C API: mod_apreq.c [joes]

Added ctx->saw_eos to ensure we don't read from upstream filters
after receiving an eos bucket.  Otherwise it was possible for
two eos buckets to appear when a prefetch read is involved, which
breaks other modules like mod_proxy.  This bug was uncovered by
Philippe Chiasson.  mod_apreq's apreq_env_majic_number bumped to
reflect the added fixes.

- October 17, 2003 - configure: --enable-perl-glue [joes]

The --enable-perl-glue option integrates the perl glue into the 
normal Unix build cycle.  It is disabled by default, but is silently 
reenabled if the user configures the source tree via Makefile.PL.

- October 14, 2003 - C API [joes]

Added apreq_header_attribute() and fixed mfd parser to allow 
"charset" attribute to appear in the Content-Type header.  Sven
Geisler points out that Opera 7.20 does generate such headers. 

- October 14, 2003 - C API [joes]
